--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="ar">
 
 <head>
     <meta charset="UTF-8">
@@ -31,7 +31,7 @@
     <section class="contact-form py-3">
         <div class="container">
             <h1 class="l-headding"><span class="text-primary">בואי נדבר</h1>
-            <form action="process.php">
+            <form method="POST" data-netlify="true">
                 
                 <div class="form-group">
                     <input type="text" placeholder="שם מלא">
