--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="ar">
+<!-- <html lang="en"> -->
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +10,7 @@
     <meta name="description" content="לוכדי חלומות ומקרמה בעבודת יד, עיצוב הבית ואירועים בהתאמה אישית">
     <meta name="keywords" content="מקרמה, לוכדי חלומות, עבודת יד, dreamcatchers, macrame, handemade, craft, design,event design">
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" media="screen and (max-width: 780px)" href="css/mobile.css">
     <script src="https://kit.fontawesome.com/fa98044e1d.js" crossorigin="anonymous"></script>
 </head>
 
@@ -40,7 +42,7 @@
     <section class="home-info">
         <div class="info-img"></div>
         <div class="info-content">
-        <h2><strong>ברוכה הבאה</strong></h2>
+        <h2 class="card"><strong>ברוכה הבאה</strong></h2>
         <P>אני נוי ומאז ומתמיד אהבתי ליצור
             לגעת בצבעים, למצוא מציאות ברחוב, לשפץ ולהפוך אותן למשהו חדש,
             ולהשתקע ביצירה עד השעות הקטנות של הלילה...
@@ -61,12 +63,9 @@
         <div media-content>Let's get Social</div>
         <div media-icons>
         <a href="https://www.facebook.com/NoyDreams" i class="fa-brands fa-facebook fa-2x"></a>
-        <br>
         <a href="https://www.instagram.com/noy.dreams/" i class="fa-brands fa-instagram fa-2x"></a>
     </div>
 </body>
-
-<div class="clr" ></div>
 
 <footer class="main-footer">
     <p>החלומות של נוי&copy; 2023</p>
